--- a/app/views/home/teams.html.erb
+++ b/app/views/home/teams.html.erb
@@ -1,15 +1,15 @@
 <div class="container" style="padding-top: 7%;">
-    <h2>Teams
-        <p class="lead">This is the list of all teams</p>
+    <h2><%= t('home.teams.header') %></h2>
+        <p class="lead"><%= t('home.teams.list') %></p>
         <hr><br>
         <div class="agenda">
             <div class="table-responsive">
                 <table class="table table-condensed table-bordered">
                     <thead>
                         <tr>
-                            <th class='small-th'>Team</th>
-                            <th class='small-th'>Project</th>
-                            <th class='small-th'>Link</th>
+                            <th class='small-th'><%= t('home.teams.table.team') %></th>
+                            <th class='small-th'><%= t('home.teams.table.project') %></th>
+                            <th class='small-th'><%= t('home.teams.table.link') %></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -34,7 +34,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title" id="lineModalLabel<%= t.projects.first.id %>">My Modal</h3>
+                <h3 class="modal-title" id="lineModalLabel<%= t.projects.first.id %>">
+                    <%= t.projects.first.name %>
+                </h3>
             </div>
             <div class="modal-body">
 
@@ -44,7 +46,7 @@
             <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default" data-dismiss="modal"  role="button">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"  role="button"><%= t('home.teams.modal.close') %></button>
                     </div>
                 </div>
             </div>
