--- a/app/views/mentors/confirmations/new.html.erb
+++ b/app/views/mentors/confirmations/new.html.erb
@@ -1,22 +1,25 @@
 <div class="container" style='padding-top: 10%;'>
     <div class="row">
         <div class="col-md-6">
-            <h2>Resend confirmation instructions</h2>
+            <h2><%= t('authentication.mentor.confirmations.action') %></h2>
 
-			<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-			  <%= f.error_notification %>
-			  <%= f.full_error :confirmation_token %>
+            <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+              <%= f.error_notification %>
+              <%= f.full_error :confirmation_token %>
 
-			  <div class="form-group">
-			    <%= f.input :email, required: true, autofocus: true, input_html: {class: "form-control"} %>
-			  </div>
+              <div class="form-group">
+                <%= f.input :email, required: true, autofocus: true,
+                    label: t('authentication.mentor.confirmations.placeholders.email'),
+                    input_html: {class: "form-control"}
+                %>
+              </div>
 
-			  <div class="form-group">
-			    <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-block" %>
-			  </div>
-			<% end %>
+              <div class="form-group">
+                <%= f.button :submit, t('authentication.mentor.confirmations.action'), class: "btn btn-block" %>
+              </div>
+            <% end %>
 
-			<%= render "mentors/shared/links" %>
+            <%= render "mentors/shared/links" %>
         </div>
     </div>
 </div>
