--- a/app/views/mentors/mailer/confirmation_instructions.html.erb
+++ b/app/views/mentors/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= t('authentication.mentor.mailer.confirmation.welcome') %>, <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t('authentication.mentor.mailer.confirmation.you_can_confirm') %>:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t('authentication.mentor.mailer.confirmation.action'), confirmation_url(@resource, confirmation_token: @token) %></p>
