--- a/app/views/mentors/mailer/password_change.html.erb
+++ b/app/views/mentors/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t('authentication.mentor.mailer.password_change.hello') %>, <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p><%= t('authentication.mentor.mailer.password_change.message') %></p>
