--- a/app/views/mentors/passwords/new.html.erb
+++ b/app/views/mentors/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style='padding-top: 10%;'>
     <div class="row">
         <div class="col-md-6">
-            <h2>Forgot your password?</h2>
+            <h2><%= t('authentication.mentor.passwords.forgot') %></h2>
 
             <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
               <%= f.error_notification %>
@@ -11,7 +11,7 @@
               </div>
 
               <div class="form-group">
-                <%= f.button :submit, "Send me reset password instructions", class: "btn btn-block" %>
+                <%= f.button :submit, t('authentication.mentor.passwords.send_reset'), class: "btn btn-block" %>
               </div>
             <% end %>
 
