--- a/app/views/mentors/registrations/edit.html.erb
+++ b/app/views/mentors/registrations/edit.html.erb
@@ -1,31 +1,59 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <h2 style="padding-top: 15%;"><%= t('authentication.mentor.sign_up.edit.action') %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :name, required: true %>
-    <%= f.input :description %>
-    <%= f.input :organization %>
-    <%= f.input :avatar, as: :file %>
+        <div class="form-group">
+          <%= f.input :email, required: true, autofocus: true,
+            label: t('authentication.mentor.sign_up.edit.email')
+          %>
+          <%= f.input :name, required: true,
+            label: t('authentication.mentor.sign_up.placeholders.name')
+          %>
+          <%= f.input :description,
+            label: t('authentication.mentor.sign_up.placeholders.description')
+          %>
+          <%= f.input :city,
+            label: t('authentication.mentor.sign_up.placeholders.city')
+          %>
+          <%= f.input :organization,
+            label: t('authentication.mentor.sign_up.placeholders.organization')
+          %>
+          <%= f.input :avatar, as: :file, label: t('authentication.teammate.sign_up.placeholders.avatar') %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <p><%= t('authentication.mentor.sign_up.edit.waiting_for_confirm') %>: <%= resource.unconfirmed_email %></p>
+          <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+          <%= f.input :password, autocomplete: "off",
+            hint: t('authentication.mentor.sign_up.edit.leave_blank_hint'), required: false,
+            label: t('authentication.mentor.sign_up.placeholders.password')
+          %>
+          <%= f.input :password_confirmation, required: false,
+            label: t('authentication.mentor.sign_up.placeholders.password_confirmation')
+          %>
+          <%= f.input :current_password,
+            hint: t('authentication.mentor.sign_up.edit.current_password_hint'), required: true,
+            label: t('authentication.mentor.sign_up.edit.current_password')
+          %>
+        </div>
+
+        <div class="form-group">
+          <%= f.button :submit, t('authentication.mentor.sign_up.edit.update') %>
+        </div>
+      <% end %>
+
+      <h3><%= t('authentication.mentor.sign_up.edit.cancel_account') %></h3>
+
+      <p>
+        <%= t('authentication.mentor.sign_up.edit.unhappy') %> <%= link_to t('authentication.mentor.sign_up.edit.cancel_account'), registration_path(resource_name),
+        data: { confirm: t('authentication.mentor.sign_up.edit.cancel_confirm') }, method: :delete %>
+      </p>
+
+      <%= link_to t('back'), :back %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
