--- a/app/views/teammates/mailer/reset_password_instructions.html.erb
+++ b/app/views/teammates/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t('authentication.teammate.mailer.reset_password.hello') %>, <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= t('authentication.teammate.mailer.reset_password.message') %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to <%= t('authentication.teammate.mailer.reset_password.action') %>, edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= t('authentication.teammate.mailer.reset_password.did_not_request') %></p>
+<p><%= t('authentication.teammate.mailer.reset_password.no_link_no_change') %></p>
