--- a/app/views/teammates/mailer/unlock_instructions.html.erb
+++ b/app/views/teammates/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t('authentication.teammate.mailer.unlock.hello') %>, <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= t('authentication.teammate.mailer.unlock.message') %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= t('authentication.teammate.mailer.unlock.link') %>:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to <%= t('authentication.teammate.mailer.unlock.action') %>, unlock_url(@resource, unlock_token: @token) %></p>
