--- a/app/views/teammates/passwords/edit.html.erb
+++ b/app/views/teammates/passwords/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style='padding-top: 10%;'>
     <div class="row">
         <div class="col-md-6">
-          <h2>Change your password</h2>
+          <h2><%= t('authentication.teammate.passwords.action') %></h2>
 
           <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
             <%= f.error_notification %>
@@ -10,12 +10,13 @@
             <%= f.full_error :reset_password_token %>
 
             <div class="form-group">
-              <%= f.input :password, label: "New password", required: true, autofocus: true %>
-              <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+              <%= f.input :password, label: t('authentication.teammate.passwords.new'), required: true, autofocus: true %>
+              <%= f.input :password_confirmation,
+                label: t('authentication.teammate.passwords.confirm'), required: true %>
             </div>
 
             <div class="form-group">
-              <%= f.button :submit, "Change my password", class: "btn btn-primary btn-block" %>
+              <%= f.button :submit, t('authentication.teammate.passwords.action'), class: "btn btn-primary btn-block" %>
             </div>
           <% end %>
 
