--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -81,9 +81,9 @@
     <div class="content-section-b">
 
         <div class="container sponsors-slider">
-
             <!-- <div class="row"> -->
-                <%= render partial: 'sponsors_slider' %>
+                <%#= render partial: 'sponsors_slider' %>
+                <%= render 'sponsors_gallery' %>
 <!--                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <%= link_to I18n.t('landing.sign_up_button'),new_teammate_registration_path , { class: 'btn btn-default btn-lg' } %>
+                            <%= link_to I18n.t('landing.sign_up_button2'),new_teammate_registration_path , { class: 'btn btn-default btn-lg' } %>
                         </li>
                         <li>
                             <%= link_to I18n.t('landing.mentor_sign_up_button'),mentors_path , { class: 'btn btn-default btn-lg' } %>
