Add contact form

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,3 +1,30 @@
-<div class="container" style='padding-top: 10%;'>
-    <h4>This part of the site is currently under construction.</h4>
+<div class="container contact-form-container" style='padding-top: 10%;'>
+    <div class="row">
+        <form role="form" id="contact-form" class="contact-form">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="Name" autocomplete="off" id="Name" placeholder="Name">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="E-mail">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <textarea class="form-control textarea" rows="3" name="Message" id="Message" placeholder="Message"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn main-btn pull-right">Send a message</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
