Add translations to /mentors form

--- a/app/views/home/mentors.html.erb
+++ b/app/views/home/mentors.html.erb
@@ -1,31 +1,33 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <h2 style="padding-top: 15%;">Sign up for mentorship:</h2>
+      <h2 style="padding-top: 15%;"><%= t('authentication.mentor.sign_up.action2') %></h2>
 
         <%= simple_form_for(Mentor.new, url: registration_path(:mentor)) do |f| %>
 
           <div class="form-group">
             <%= f.error_notification %>
-            <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Name", input_html: {class: "form-control"} %>
+            <%= f.input :name, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.name'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Email", input_html: {class: "form-control"} %>
+            <%= f.input :email, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.email'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :city, required: true, autofocus: true, label: false, placeholder: "City", input_html: {class: "form-control"} %>
+            <%= f.input :description, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.description'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :description, required: true, autofocus: true, label: false, placeholder: "A couple words about yourself", input_html: {class: "form-control"} %>
+            <%= f.input :city, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.city'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :organization, required: true, autofocus: true, label: false, placeholder: "Organization", input_html: {class: "form-control"} %>
+            <%= f.input :organization, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.organization'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :avatar, as: :file, input_html: {class: "form-control"} %>
+            <%= f.input :avatar, as: :file,
+              label: t('authentication.mentor.sign_up.placeholders.avatar'),
+              input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :password, required: true, label: false, placeholder: "Password", input_html: {class: "form-control"} %>
+            <%= f.input :password, required: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.password'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :password_confirmation, required: true, label: false, placeholder: "Confirm password", input_html: {class: "form-control"} %>
+            <%= f.input :password_confirmation, required: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.password_confirmation'), input_html: {class: "form-control"} %>
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block form-control" %>
+            <%= f.button :submit, t('authentication.mentor.sign_up.action'), class: "btn btn-primary btn-block form-control" %>
           </div>
         <% end %>
     </div>
