--- a/app/views/mentors/registrations/new.html.erb
+++ b/app/views/mentors/registrations/new.html.erb
@@ -11,7 +11,7 @@
             <br>
             <%= f.input :email, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.email'), input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :description, required: true, autofocus: true, label: false, placeholder: "A couple words about yourself", input_html: {class: "form-control"} %>
+            <%= f.input :description, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.description'), input_html: {class: "form-control"} %>
             <br>
             <%= f.input :city, required: true, autofocus: true, label: false, placeholder: t('authentication.mentor.sign_up.placeholders.city'), input_html: {class: "form-control"} %>
             <br>
