--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -151,7 +151,7 @@
     <!-- /.banner -->
 
     <!-- Footer -->
-    <footer>
+     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -182,6 +182,11 @@
                                     <li><%= link_to 'English', url_for(locale: 'en') %></li>
                                     <li><%= link_to 'Русский', url_for(locale: 'ru') %></li>
                                 </ul>
+                            </div>
+                            <div class="center-block">
+                                <a href="https://fb.com"><i id="social-fb" class="fa fa-facebook fa-3x social"></i></a>
+                                <a href="https://twitter.com"><i id="social-tw" class="fa fa-twitter fa-3x social"></i></a>
+                                <a href="https://vk.com"><i id="social-vk" class="fa fa-vk fa-3x social"></i></a>
                             </div>
                         </li>
                     </ul>
